# sfml-rtl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
RTLRegistration/: cxx_mirror.h  reg_decls.h  reg_ids.h
RTLRegistration/reg_src/: cxx_mirror.cpp  regs10_SoundBuffer.cpp  regs11_SoundBufferRecorder.cpp  regs20_SoundRecorder.cpp  regs21_SoundSource.cpp  regs22_SoundStream.cpp  regs23_BlendMode.cpp  regs24_CircleShape.cpp  regs25_ConvexShape.cpp  regs26_Font.cpp  regs2_InputSoundFile.cpp  regs30_Image.cpp  regs31_RectangleShape.cpp  regs32_RenderStates.cpp  regs33_RenderTarget.cpp  regs34_RenderTexture.cpp  regs37_RenderWindow.cpp  regs38_Shader.cpp  regs39_Shape.cpp  regs3_Listener.cpp  regs40_Sprite.cpp  regs41_StencilMode.cpp  regs42_Text.cpp  regs43_Texture.cpp  regs45_Transform.cpp  regs46_Transformable.cpp  regs47_VertexArray.cpp  regs48_VertexBuffer.cpp  regs49_View.cpp  regs51_Ftp.cpp  regs52_Http.cpp  regs53_IpAddress.cpp  regs54_Packet.cpp  regs55_Socket.cpp  regs56_SocketSelector.cpp  regs57_TcpListener.cpp  regs58_TcpSocket.cpp  regs59_UdpSocket.cpp  regs61_Clock.cpp  regs62_Err.cpp  (+20 more)
ReflectSFMLApp/: main.cpp
ReflectionTemplateLib/: CMakeLists.txt  rtl_access.h  rtl_builder.h
ReflectionTemplateLib/cmake/: RTLIntegration.cmake
ReflectionTemplateLib/rtl/: CMakeLists.txt  rtl_constants.h  rtl_constructor.h  rtl_errors.h  rtl_forward_decls.h  rtl_function.h  rtl_function_erased_return.h  rtl_method.h  rtl_method_const.h  rtl_method_erased.h  rtl_method_erased_return.h  rtl_method_erased_target.h  rtl_traits.h  rtl_typeid.h
ReflectionTemplateLib/rtl/builder/: Builder.h  CMakeLists.txt  ConstructorBuilder.h  RecordBuilder.h  Reflect.h  ReflectionBuilder.h  RegisterCtor.h  RegisterFunction.h  RegisterMethod.h  SetupDispatch.h
ReflectionTemplateLib/rtl/detail/: CMakeLists.txt
ReflectionTemplateLib/rtl/detail/inc/: CMakeLists.txt  ConversionUtils.h  CxxReflection.h  HopBuilderFunction.h  HopBuilderFunction.hpp  HopBuilderMethod.h  HopBuilderMethod.hpp  RObjExtracter.h  RObjectBuilder.h  RObjectBuilder.hpp  RObjectId.h  RObjectUPtr.h  ReflectCast.h  ReflectCast.hpp  ReflectCastUtil.h
ReflectionTemplateLib/rtl/detail/src/: CMakeLists.txt  CxxReflection.cpp  RObjectConverters_string.cpp  ReflectCast.cpp
ReflectionTemplateLib/rtl/dispatch/: CMakeLists.txt  aware_constructor.h  aware_return.h  aware_return_n_target.h  aware_return_n_target_const.h  cache_function_ptr.h  cache_method_ptr.h  cache_method_ptr_const.h  forward_call.h  function_lambda.h  function_ptr.h  function_ptr.hpp  functor.h  functor_cast.h  method_lambda.h  method_ptr.h  method_ptr.hpp  method_ptr_const.h  method_ptr_const.hpp
ReflectionTemplateLib/rtl/inc/: CMakeLists.txt  CxxMirror.h  CxxMirrorToJson.h  Function.h  Function.hpp  Method.h  Method.hpp  RObject.h  RObject.hpp  Record.h  Record.hpp  type_meta.h  type_meta.hpp  view.h  view.hpp
ReflectionTemplateLib/rtl/src/: CMakeLists.txt  CxxMirror.cpp  CxxMirrorToJson.cpp  Function.cpp
